# hand_gesture

./: CMakeLists.txt  README.md
src/: cam.cpp  image.cpp
